# AstraS_Client

./: CMakeLists.txt  README.md
src/: main.cpp
src/camera_provider/: camera_provider.cpp  camera_provider.hpp  debug_commander.cpp  debug_commander.hpp  tcp_commander.cpp  tcp_commander.hpp  udp_pipeline.cpp  udp_pipeline.hpp
src/net/: udpsender.cpp  udpsender.hpp
